--- a/playbook.yml
+++ b/playbook.yml
@@ -1,40 +1,39 @@
 ---
-- name: Install Java and Aerospike on Ubuntu
-  hosts: all
-  become: yes
+- name: Install Aerospike on Ubuntu 22.04
+  hosts: localhost
+  become: true
   tasks:
-    - name: Update apt package list
-      apt:
-        update_cache: yes
-
-    - name: Install OpenJDK 8 (required for Aerospike)
-      apt:
-        name: openjdk-8-jdk
+    - name: Add Aerospike repository key
+      apt_key:
+        url: https://download.aerospike.com/debian/aerospike-key.asc
         state: present
 
-    - name: Download and install Aerospike repository
-      shell: curl -s https://packages.aerospike.com/gpg/ | apt-key add -
-    
     - name: Add Aerospike repository
-      shell: echo "deb https://packages.aerospike.com/debian/ ubuntu main" | tee -a /etc/apt/sources.list.d/aerospike.list
+      apt_repository:
+        repo: "deb http://packages.aerospike.com/debian/ enterprise main"
+        state: present
+        filename: "aerospike"
 
-    - name: Update apt package list again after adding Aerospike repo
+    - name: Update apt cache
       apt:
         update_cache: yes
 
-    - name: Install Aerospike server
+    - name: Install Aerospike server package
       apt:
-        name: aerospike-server
+        name: aerospike-server-community
         state: present
 
-    - name: Start Aerospike service
-      systemd:
+    - name: Ensure Aerospike service is started
+      service:
         name: aerospike
         state: started
         enabled: yes
 
-    - name: Check status of Aerospike service
-      systemd:
-        name: aerospike
-        state: started
+    - name: Verify Aerospike service status
+      command: systemctl status aerospike
+      register: service_status
+      failed_when: "'active (running)' not in service_status.stdout"
 
+    - name: Output Aerospike installation status
+      debug:
+        msg: "Aerospike service is installed and running successfully."
